--- a/mis-componentes/src/styles/MainStyles.css
+++ b/mis-componentes/src/styles/MainStyles.css
@@ -89,14 +89,12 @@
     box-shadow: 3px 3px 5px gray; 
 }
 
-.mainCB-1{
-    border-color: rgb(240, 240, 240);
-    margin:10px;
-    box-shadow: 3px 3px 5px gray;
-}
-
-.mainCB{
-    border-color: rgb(240, 240, 240);
-    margin:10px;
-    font-size: 20px;
+.mainI-3 {
+    border-color: mediumseagreen;
+    border-style: solid;
+    /* border-radius: 50px; */
+    padding: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    box-shadow: 3px 3px 5px gray; 
 }
