--- a/mis-componentes/src/styles/MainStyles.css
+++ b/mis-componentes/src/styles/MainStyles.css
@@ -7,11 +7,10 @@
     border-color: MediumSeaGreen;
     border-width: 2px;
     text-align: center;
-    box-shadow: 4px 3px 50px gray;
+    box-shadow: 4px 3px 30px gray;
 }
 
 h1{
-    background: rgb(60,179,113,0.2);
     border-bottom: 1px solid mediumseagreen; 
 }
 
@@ -20,86 +19,13 @@ h1{
     margin: 20px 0px;
 }
 
-.mainB-1 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 8px;
-    background: rgb(33, 168, 94);
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    /* background: linear-gradient(to right, #A74CF2, #617BFB); */
+.encabezado{
+    width: 100%;
+    color: mediumseagreen;
+    border-bottom: 1px solid mediumseagreen;
+    margin: 0px;
 }
 
-.mainB-2 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 20px;
-    /* background: rgb(33, 168, 94); */
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: MediumSeaGreen;
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    /* background: linear-gradient(to right, #A74CF2, #617BFB); */
-}
-
-.mainB-3 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 50px;
-    /* background: rgb(33, 168, 94); */
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    background: linear-gradient(to right, MediumSeaGreen, rgb(33, 130, 168));
-}
-
-.mainI-1 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    border-radius: 8px;
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    box-shadow: 3px 3px 5px gray;
-}
-
-.mainI-2 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    border-radius: 50px;
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: clip;
-    box-shadow: 3px 3px 5px gray; 
-}
-
-.mainI-3 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    /* border-radius: 50px; */
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    box-shadow: 3px 3px 5px gray; 
+.encabezado:hover{
+    background: rgb(60,179,113,0.2);
 }
