feb 5 2020 (wed 7:18pm)
arreglando un poco

--- a/mis-componentes/src/styles/Button.css
+++ b/mis-componentes/src/styles/Button.css
@@ -1,53 +1,3 @@
-.mainB-1 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 8px;
-    background: rgb(33, 168, 94);
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    /* background: linear-gradient(to right, #A74CF2, #617BFB); */
-}
-
-.mainB-2 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 20px;
-    /* background: rgb(33, 168, 94); */
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: MediumSeaGreen;
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    /* background: linear-gradient(to right, #A74CF2, #617BFB); */
-}
-
-.mainB-3 {
-    max-width: max-content;
-    width: max-content;
-    min-width: 70px;
-    max-height: 55px;
-    height: 50px;
-    min-height: 45px;
-    border-radius: 50px;
-    /* background: rgb(33, 168, 94); */
-    border: MediumSeaGreen;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    margin:10px;
-    box-shadow: 2px 2px 5px gray;
-    background: linear-gradient(to right, MediumSeaGreen, rgb(33, 130, 168));
+button.muestra{
+    margin: 20px 0px;
 }
