--- a/mis-componentes/src/styles/Input.css
+++ b/mis-componentes/src/styles/Input.css
@@ -1,29 +1,3 @@
-.mainI-1 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    border-radius: 8px;
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    box-shadow: 3px 3px 5px gray;
-}
-
-.mainI-2 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    border-radius: 50px;
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: clip;
-    box-shadow: 3px 3px 5px gray; 
-}
-
-.mainI-3 {
-    border-color: mediumseagreen;
-    border-style: solid;
-    /* border-radius: 50px; */
-    padding: 3px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    box-shadow: 3px 3px 5px gray; 
+input.muestra{
+    margin: 20px 0px;
 }
